# personal-brain-gallery

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-tencent-cos.yml
brain-context/: README.md
brain-core/: README.md  workflow.md
brain-memory/: README.md
brain-skills/: README.md  browser-debug.skill.json  local-context-search.skill.json
brain-tools/: README.md  index-funds.md  workspace.md
brain_core/: __init__.py  cli.py  douyin.py  video.py
docs/: architecture.md  github-first-playbook.md  integration-roadmap.md  personal-brain-exhibits.json  product-spec.md  tencent-cos-github-deploy.md  中文产品使用说明.md
registry/: mirror-audit.md  priority-matrix.md  projects.json
tests/: test_cli.py
workspace/: brain-dashboard-data.json  personal-brain-gallery.html  personal-brain-hud.html  personal-brain-intro.md
