[project]
name = "github-first-local-brain"
version = "0.1.0"
description = "A GitHub-first local brain scaffold for personal agent infrastructure."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
brain = "brain_core.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

